style/style.css
/* ... */
.p-15 {
  padding: 15px;
}

.p-2 {
  padding: 20px;
}

.pt-0 {
  padding-top: 0px;
}

.pt-05 {
  padding-top: 5px;
}

.pt-1 {
  padding-top: 10px;
}

.pt-15 {
  padding-top: 15px;
}

.pt-2 {
  padding-top: 20px;
}

.pb-0 {
  padding-bottom: 0px;
}

.pb-05 {
  padding-bottom: 5px;
}

.pb-1 {
  padding-bottom: 10px;
}

.pb-15 {
  padding-bottom: 15px;
}

.pb-2 {
  padding-bottom: 20px;
}

.pl-0 {
  padding-left: 0px;
}

.pl-05 {
  padding-left: 5px;
}

.pl-1 {
  padding-left: 10px;
}

.pl-15 {
  padding-left: 15px;
}

.pl-2 {
  padding-left: 20px;
}

.pr-0 {
  padding-right: 0px;
}

.pr-05 {
  padding-right: 5px;
}

.pr-1 {
  padding-right: 10px;
}

.pr-15 {
  padding-right: 15px;
}

.pr-2 {
  padding-right: 20px;
}

.w-0 {
  width: 0px;
}

.w-05 {
  width: 5px;
}

.w-1 {
  width: 10px;
}

.w-2 {
  width: 20px;
}

.w-3 {
  width: 30px;
}

.h-0 {
  height: 0px;
}

.h-05 {
  height: 5px;
}

.h-1 {
  height: 10px;
}

.h-15 {
  height: 15px;
}

.h-2 {
  height: 20px;
}

.h-3 {
  height: 30px;
}

.opaO {
  opacity: 0;
}

.opa1 {
  opacity: 1;
}

.fs-10 {
  font-size: 10px;
}

.fs-15 {
  font-size: 15px;
}

.fs-20 {
  font-size: 20px;
}

.fs-25 {
  font-size: 25px;
}

.fs-30 {
  font-size: 30px;
}

.fs-35 {
  font-size: 35px;
}

.fs-40 {
  font-size: 40px;
}

.fs-45 {
  font-size: 45px;
}

/*
#4a6ee565 body color

*/
/*
#8d8d8d border
#b3b3b3 hr element color

#0050ff element selector border active
#006eff2e box shadow et background color selector border active

*/
@font-face {
  font-family: "pacifico";
  src: url("./font/Pacifico.ttf") format("truetype");
}
@font-face {
  font-family: "staaliches";
  src: url("./font/Staatliches.ttf") format("truetype");
}
@font-face {
  font-family: "typori";
  src: url("./font/Typori.ttf") format("truetype");
}
body {
  margin: 0px;
  height: 1000px;
  background-color: #4a6ee565;
  background-image: url("../img/grid2.png");
  background-size: 37%;
  background-repeat: repeat;
}

hr {
  margin: 0px;
  border-left: #b3b3b3 solid 0.5px;
}

.no-transition {
  transition: none !important;
}

img, div, h1 {
  user-select: none;
}

input[type=range] {
  width: 80px;
  height: 3px;
  border-radius: 10px;
  -webkit-appearance: none;
  background-color: silver;
}
input[type=range]::-webkit-slider-thumb {
  width: 10px;
  -webkit-appearance: none;
  border-radius: 10px;
  height: 10px;
  cursor: ew-resize;
  background: silver;
  box-shadow: -80px 0 0 80px #00000000;
  transition: all 0.2s;
}
input[type=range]:hover::-webkit-slider-thumb {
  width: 10px;
  -webkit-appearance: none;
  border-radius: 10px;
  height: 10px;
  cursor: ew-resize;
  background: #000000;
  box-shadow: -80px 0 0 80px #00000000;
  transition: all 0.2s;
}

.border-select {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 25px;
  height: 27px;
}
.border-select .border-top {
  border-top: solid #8d8d8d 0.8px;
  width: 22px;
  height: -0.8px;
}
.border-select .middle {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 28px;
}
.border-select .middle .border-left {
  border-left: solid #8d8d8d 0.8px;
  margin-right: 4px;
  height: 22px;
}
.border-select .middle .all-borders {
  border: solid #8d8d8d 0.8px;
  width: 8px;
  height: 8px;
  margin: 0px 4px;
  position: relative;
}
.border-select .middle .all-borders:hover {
  border: solid #0050ff 1px;
  box-shadow: 0px 0px 4px 3px #006eff2e;
  background-color: #006eff2e;
  margin: 0px 3.8px;
}
.border-select .middle .border-right {
  border-right: solid #8d8d8d 0.8px;
  margin-left: 4px;
  height: 22px;
}
.border-select .border-bottom {
  border-bottom: solid #8d8d8d 0.8px;
  width: 22px;
}

#position {
  position: absolute;
  z-index: 20;
  top: 50px;
  left: 50px;
  width: min-content;
  display: flex;
}
#position #position-move {
  cursor: grab;
}
#position #position-interface {
  border: #ff0000 dashed 3px;
  display: flex;
  align-items: center;
  justify-content: center;
  min-height: 152px;
}
#position #position-interface .contain-elem-and-padding {
  min-height: 152px;
  height: 100%;
  width: 100%;
}
#position #position-interface .contain-elem-and-padding .contain-elem {
  background-color: #ff00002f;
}
#position #position-interface .contain-elem-and-padding .pos-if-center {
  min-height: 152px;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
}
#position #position-interface .contain-elem-and-padding .pos-if-center .contain-elem-container {
  display: flex;
  align-items: center;
  justify-content: center;
}
#position #position-interface .contain-elem-and-padding .pos-if-center .horizon-padding {
  width: auto;
  min-height: 20px;
  height: 50%;
}
#position #position-interface .contain-elem-and-padding .vertical-padding {
  height: auto;
  min-width: 20px;
  width: 100%;
}
#position[active] #position-move {
  cursor: grabbing;
}

#position[invisible] #position-menu-opener, #position[invisible] #position-menu {
  opacity: 0;
  transition: opacity 0.5s 1s;
}
#position[invisible] #position-interface {
  border: dashed rgba(255, 0, 0, 0) 3px;
  transition: border 0.5s 1s;
}
#position[invisible] .contain-elem, #position[invisible] #position-elems-container {
  background: rgba(0, 0, 0, 0) !important;
  transition: background 0.5s 1s;
}
#position[invisible] .cel {
  border: dashed rgba(255, 0, 0, 0) 1px !important;
  transition: border 0.5s 1s;
}

#position-menu-opener {
  white-space: nowrap;
  height: 50px;
  border-top: #ff0000 solid 3px;
  border-left: #ff0000 solid 3px;
  border-radius: 10px 12px 0px 0px;
  background-color: #ff00002f;
  transition: border-radius 0s 0.3s;
}
#position-menu-opener .title-and-angle {
  display: flex;
  align-items: center;
}
#position-menu-opener .title-and-angle .title {
  width: 100%;
}
#position-menu-opener .title-and-angle .title h2 {
  white-space: nowrap;
  font-family: "typori";
  color: #640000;
  font-size: 35px;
  margin: 0px;
  margin-left: 8px;
}
/* ... */

